fixed GeelyV1 component styles bleeding

--- a/src/templates/GeelyV1/components/nav/Nav.module.css
+++ b/src/templates/GeelyV1/components/nav/Nav.module.css
@@ -1,4 +1,4 @@
-nav {
+.nav_container {
     height: 8vh;
     width: 100vw;
     background-color: var(--clr-bg);
@@ -14,7 +14,7 @@ nav {
     position: fixed;
 }
 
-.nav_container {
+.nav_inner_container {
     height: 7vh;
     width: 90vw;
     margin: 0 auto;
