--- a/src/templates/GeelyV1/pages/hero/Hero.module.css
+++ b/src/templates/GeelyV1/pages/hero/Hero.module.css
@@ -1,4 +1,4 @@
-header {
+.hero_container {
     display: flex;
     justify-content: center;
     height: 100vh;
@@ -53,7 +53,7 @@ header {
 }
 
 @media screen and (max-width: 768px) {
-    header {
+    .hero_container {
         height: 100vh;
         width: 100%;
         background-size: cover;
